# ghostify

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
app/src/: lib.rs
end2end/: playwright.config.ts
server/src/: main.rs
