[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.7.3" }
leptos_meta = { version = "0.7.3"}
leptos_router = { version = "0.7.3" }
leptos_axum = { version = "0.7.3" }

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
simple_logger = "5.0.0"
thiserror = "2.0.11"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
wasm-bindgen = "=0.2.100"

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "ghostify"

bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/globals.css"
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

end2end-cmd = "bunx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"

watch = false
env = "DEV"

# Features
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
